octsympy 2.2.2-dev
==================

  * Fix for configure script using Python 3 (thanks Vadim Gribanov).

  * Bug fixes and update doctests.

  * Start using "print_usage" for invalid inputs as is common
    practice in Octave.



octsympy 2.2.1 (2015-04-22)
===========================

  * Fix an ascii pretty printing regression (issue #234).

  * Other minor fixes for doctests, sympref and symreplace.



octsympy 2.2.0 (2015-04-20)
===========================

  * New commands:

          catalan
          eulergamma
          lambertw

  * Installing symbolic package now check for Python and minimum
    version of SymPy (thanks Carnë Draug for autoconf).

  * Installations from Octave-Forge ("pkg install -forge symbolic")
    should now work on Windows (thanks vassbu).  You will need the
    Python and SymPy dependencies.  Or you can use the [bundled
    package](https://github.com/cbm755/octsympy/releases)

  * Added support for Python 3 (still works with Python 2 as well).

  * Documentation improvements especially to assumptions.  Examples
    within documentation can now be tested with doctests, see the
    `octsympy_doctests.m` function.

  * Fix a warning on Octave 4.0.0-rc1 and make tests work properly.

  * Other bug fixes: assumptions; symvar and symbolic matrix powers;
    various display issues.



octsympy 2.1.0 (2015-03-06)
===========================

  * New commands:

          columns
          degree
          formula
          ismatrix
          numden
          rows

  * Additional ways of calling symsum, symprod, and subs for better
    compatibility with other symbolic toolboxes.

  * Bug fixes in poly2sym, sym2poly, symfun (thanks @rocketsound),
    prod, horner, coeffs.

  * Documentation improvements.

  * Improvements to "argnames" and "formula" for the dependent
    variables and dependent expression of a symfun.  These are now
    implemented for basic sym objects as well.
